--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.username=sa
 # spring.datasource.password=
 
-# spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 numTimeStamps=10
+maxtypeaheadresults=5
