refactored portfolio operations, top gainers and losers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,9 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.username=sa
 # spring.datasource.password=
 
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 numTimeStamps=10
 maxtypeaheadresults=5
+numtopmovers=3
